deployment/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devjeans-server
  labels:
    app: devjeans
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devjeans
      tier: backend
  template:
    metadata:
      labels:
        app: devjeans
        tier: backend
      annotations:
        kops.k8s.io/instancegroup: nodes
    spec:
      nodeSelector:
        kops.k8s.io/instancegroup: nodes
      containers:
        - name: devjeans-server
          image: patnmat/devjeans-server:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: devjeans-server-service
  labels:
    app: devjeans
spec:
  type: ClusterIP
  selector:
    app: devjeans
    tier: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
