deployment/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server
spec:
  ingressClassName: nginx
  rules:
    - host: server.dev-hee.com  # server.
      http:
        paths:
          - backend:
              service:
                name: devjeans-server-service 
                port:
                  number: 8080
            path: /
            pathType: Prefix
